# teia-omega-awakening

./: .gitignore  BENCHMARK_HISTORICO.md  Benchmark_Harness.ps1  Benchmark_Harness_Real.ps1  Benchmark_Harness_v10.ps1  Benchmark_Harness_v11.ps1  Benchmark_Harness_v12.ps1  Benchmark_Harness_v4.ps1  Benchmark_Harness_v5.ps1  Benchmark_Harness_v5_Full.ps1  Benchmark_Harness_v6.ps1  Benchmark_Harness_v7.ps1  Benchmark_Harness_v8.ps1  Benchmark_Harness_v9.ps1  Build-D7-Manifest.ps1  CLAUDE.md  COMANDOS_RAIZ.md  D4_REAL_MANIFEST.json  D7_REAL_MANIFEST.json  D8_STRESS_MANIFEST.json  DNA_ESSENCIAL.txt  Dossie_Inovacao_TEIA.json  GEMINI.md  HyperContextWindow.txt  HyperMaterialRepository.txt  Manifesto_Fundacao_P0.md  NUCLEO_ALMA.md  PLANO_INTEGRACAO_OFFLINE.md  PROVA_INTEGRIDADE_v0.4.md  README.md  README_ESTRUTURA.md  RISCO_DE_AUTOENGANO.md  ROADMAP_DE_AUTONOMIA.md  Relatorio_Comparativo_v10.0.0.md  Relatorio_Comparativo_v11.0.0.md  Relatorio_Comparativo_v12.0.0.md  Relatorio_Comparativo_v3.0.0.md  Relatorio_Comparativo_v3.1.0.md  Relatorio_Comparativo_v4.0.0.md  Relatorio_Comparativo_v5.0.0.md  (+24 more)
6_arquivos_teste/: 1264 - TEIA e Assinatura Cognitiva.md  Cenas Verticais.txt  IMG_2831.HEIC  Transcrição vlog.txt
Arqueologia do motor AION RISPA/: AION-RISPA-NDC_delta-final-alfa-omega.html  Aqui está uma síntese meticulosa e.txt  Bunner TEIA OS Definitivo.txt  ConversaQueDesenvolveuOrganismoInteligenteVivo.txt  Necessidades DashBoard.txt  Procedural real.txt  (+32 more)
release_enterprise/teia-cognitive-router/: README.md  pyproject.toml  teia_audit_dashboard.html
release_enterprise/teia-cognitive-router/docs/: INTEGRATION_GUIDE.md
release_enterprise/teia-cognitive-router/src/teia_cognitive_router/: __init__.py  _gateway.py  _notary.py  _policy.py  _reporter.py  _router.py  _verifier.py
release_enterprise/teia-cognitive-router/tests/: fetch_and_prep_mt_bench.py  run_quality_cost_benchmark.py  teia_router_bench_harness.py
release_enterprise/teia-cognitive-router/tools/: Build-And-Publish-PyPI.ps1
(+2895 files in other folders)
